--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
     <h1>Biography</h1>
 
     <p>I am a final year PhD Researcher at the intersection between Machine Learning
-and Neuroscience. My research focus on using machine learning tools to find
+and Neuroscience. My research focuses on using machine learning tools to find
 patterns in brain images and building computational models to simulate brain
 processes. I love learning new tools and methods and applying them to real
 datasets.</p>
